--- a/contact-form.html
+++ b/contact-form.html
@@ -1,4 +1,6 @@
 <form id="contactForm">
+    <h2>Kontakt oss</h2>
+    <p>Har du spørsmål? Send oss en melding!</p>
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     
