--- a/cars.html
+++ b/cars.html
@@ -26,6 +26,9 @@
                 width="100%" height="800px" style="border:none;"></iframe>
     </section>
 
+    <div id="contact-container"></div>
+    <script src="contact.js"></script>
+    
     <footer>
         <p>© 2025 Min Bedrift - Alle rettigheter reservert</p>
     </footer>
