--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dreamcar | bruktbilforhandler</title>
+    <title>Dream | bruktbilforhandler</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+ <!-- Video Sectionen --->
+ <div class="video-container">
+    <video autoplay loop muted playsinline>
+        <source src="https://ingredient-generation-generated-ingredients.canva.com/ee351f8a-4a12-4275-b252-dd0ce681adcc?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAQYCGKMUHQLRPZXQM%2F20250507%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250507T134933Z&X-Amz-Expires=105615&X-Amz-Signature=fbbf4c958764e03f108fde96c2440c14bf6adae564a36f798f3d84ee44d73f4e&X-Amz-SignedHeaders=host%3Bx-amz-expected-bucket-owner&response-expires=Thu%2C%2008%20May%202025%2019%3A09%3A48%20GMT" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
     <header>
-        <div class="logo">Hubba Supply AS</div>
+        <div class="logo glow-text">Hubba Supply AS</div>
+        
         <nav>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
-                <li><a href="cars.html">Våre Biler</a></li>
-                <li><a href="carsell.html">Vi selger bilen for deg</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="index.html" class="nav-button" >Hjem</a></li>
+                <li><a href="cars.html"class="nav-button" >Våre Biler</a></li>
+                <li><a href="carsell.html" class="nav-button">Vi selger bilen for deg</a></li>
+                <li><a href="contact.html" class="nav-button">Kontakt</a></li>
             </ul>
         </nav>
+        <button id="theme-toggle">🌙 Dark Mode</button> <!--dark mode knapp(ikke funksjonell enda)-->
     </header>
 
     <section class="hero">
@@ -54,19 +62,19 @@
         <p>Din nye bil finner du hos oss!</p>
 
         <h3>Kontaktinformasjon:</h3>
-        <p><strong>Daglig Leder:</strong> <a href="mailto:amir-dreamcar@huba.as">amir-dreamcar@huba.as</a></p>
-        <p><strong>Salg:</strong> <a href="mailto:salg-dreamcar@huba.as">salg-dreamcar@huba.as</a></p>
-        <p><strong>Innkjøp:</strong> <a href="mailto:innkjop-dreamcar@huba.as">innkjop-dreamcar@huba.as</a></p>
+        <p><strong>Daglig Leder:</strong> <a href="mail@mail.com">Jobbmail@mail.com</a></p>
+        <p><strong>Salg:</strong> <a href="mailto:Jobbmail@mail.com">Jobbmail@mail.com</a></p>
+        <p><strong>Innkjøp:</strong> <a href="mailto:Jobbmail@mail.com">Jobbmail@mail.com</a></p>
 
         <h3>Gi oss en tilbakemelding!</h3>
-        <p><strong>Markedsfører-ansvarlig:</strong> <a href="mailto:amir.barrios@huba.as">amir.barrios@huba.as</a></p>
+        <p><strong>Markedsfører-ansvarlig:</strong> <a href="Jobbmail@mail.com">Jobbmail@mail.com</a></p>
 
         <h3>Besøk oss:</h3>
-        <p><strong>Adresse:</strong> Barstølveien 22 E, 4636 Kristiansand</p>
-        <p><strong>Sentralbord:</strong> <a href="tel:38360066">383 60 066</a></p>
+        <p><strong>Adresse:</strong> En addresee 256 E, 4636 Kristiansand</p>
+        <p><strong>Sentralbord:</strong> <a href="tel:38360066">666 66 666</a></p>
 
         <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21299.45098507726!2d7.97362328798044!3d58.14686441252712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46379c77391a6c9f%3A0xacfce33928ddcf76!2sBarst%C3%B8lveien%2022E%2C%204636%20Kristiansand!5e0!3m2!1sen!2sno!4v1683734874153"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4004003.338620561!2d4.19178485133654!3d60.65828538659659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4637f92000e1cd3d%3A0xd7f6cb73bf724e19!2sHell%20%26%20Lykke%20Iselin%20Hell%20Liadal!5e0!3m2!1sen!2sno!4v1746642135164!5m2!1sen!2sno"
             width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
     </section>
