--- a/carsell.html
+++ b/carsell.html
@@ -9,15 +9,17 @@
 <body>
 
     <header>
-        <div class="logo">Min Bedrift</div>
+        <div class="logo glow-text">Hubba Slubba</div>
+        
         <nav>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
-                <li><a href="cars.html">Våre Biler</a></li>
-                <li><a href="carsell.html">Vi selger bilen for deg</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="index.html" class="nav-button" >Hjem</a></li>
+                <li><a href="cars.html"class="nav-button" >Våre Biler</a></li>
+                <li><a href="carsell.html" class="nav-button">Vi selger bilen for deg</a></li>
+                <li><a href="contact.html" class="nav-button">Kontakt</a></li>
             </ul>
         </nav>
+        <button id="theme-toggle">🌙 Dark Mode</button> <!--dark mode knapp(ikke funksjonell enda)-->
     </header>
 
     <section class="sell-your-car">
