--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         <h2>Våre tjenester</h2>
         <div class="service-list">
             <div class="service">
-                <h3>Bilfinansiering</h3>
+                <h3>✨Bilfinansiering</h3>
                 <p>Fleksible betalingsløsninger tilpasset dine behov.</p>
             </div>
             <div class="service">
-                <h3>Service & Garanti</h3>
+                <h3>🔧Service & Garanti</h3>
                 <p>Kvalitetssikring og oppfølging av kjøretøy.</p>
             </div>
             <div class="service">
-                <h3>Innbytte</h3>
+                <h3>♻️Innbytte</h3>
                 <p>Bytt inn din gamle bil for en ny modell.</p>
             </div>
         </div>
