--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="contact.html" class="nav-button">Kontakt</a></li>
             </ul>
         </nav>
-        <button id="theme-toggle">🌙 Dark Mode</button> <!--dark mode knapp(ikke funksjonell enda)-->
+        <button id="theme-toggle" class="theme-toggle">🌙 Dark Mode</button> <!--dark mode knapp(ikke funksjonell enda)-->
     </header>
 
     <section class="hero">
