--- a/pages/carsell.html
+++ b/pages/carsell.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vi selger bilen for deg</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <!-- Seksjon for video -->
+    <div class="video-container">
+        <video autoplay loop muted playsinline> <!-- Video som spilles av automatisk uten lyd -->
+            <source src="https://videos.pexels.com/video-files/31950974/13612916_2560_1440_60fps.mp4" type="video/mp4"> <!-- Kilde for videoen -->
+            Your browser does not support the video tag. <!-- Meldingen som vises hvis nettleseren ikke støtter video -->
+        </video>
+    </div>
 
     <header>
         <div class="logo glow-text">Hubba Slubba</div>
