--- a/pages/index.html
+++ b/pages/index.html
@@ -95,7 +95,7 @@
 
     <!-- Kontakt-container -->
     <div id="contact-container"></div>
-    <script src="contact.js"></script> <!-- Kobler til en ekstern JavaScript-fil -->
+    <script src="/Js/contact.js"></script> <!-- Kobler til en ekstern JavaScript-fil -->
 
     <!-- Footer-seksjonen -->
     <footer>
