--- a/pages/cars.html
+++ b/pages/cars.html
@@ -36,7 +36,7 @@
     </section>
 
     <div id="contact-container"></div>
-    <script src="contact.js"></script>
+    <script src="/js/contact.js"></script>
     
     <footer>
         <p>© 2025 Min Bedrift - Alle rettigheter reservert</p>
