--- a/pages/index.html
+++ b/pages/index.html
@@ -89,7 +89,7 @@
         <!-- Google Maps iframe -->
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4004003.338620561!2d4.19178485133654!3d60.65828538659659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4637f92000e1cd3d%3A0xd7f6cb73bf724e19!2sHell%20%26%20Lykke%20Iselin%20Hell%20Liadal!5e0!3m2!1sen!2sno!4v1746642135164!5m2!1sen!2sno"
-            width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy"> <!-- Google Maps-embed -->
+            width="100%" height="300px" style="border:0;" allowfullscreen="true" loading="lazy"> <!-- Google Maps-embed -->
         </iframe>
     </section>
 
