setup supabase connection

--- a/pages/contact-form.html
+++ b/pages/contact-form.html
@@ -1,4 +1,4 @@
-<form id="contactForm">
+<form id="contactForm" action="submit-contact.php" method="POST">
     <h2>Kontakt oss</h2>
     <p>Har du spørsmål? Send oss en melding!</p>
     <label for="name">Name:</label>
